--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "shooshim",
-  "version": "0.1.0",
+  "name": "hexagon-app",
+  "version": "0.0.1",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "3.0.1"
+  },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
